--- a/include/gstnvarguscamera_config_meson.h.in
+++ b/include/gstnvarguscamera_config_meson.h.in
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019-2020, NVIDIA CORPORATION. All rights reserved.
+ * Copyright (c) 2017-2020, NVIDIA CORPORATION. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -26,41 +26,13 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#ifndef GSTNVDSBUFFERPOOL_H_
-#define GSTNVDSBUFFERPOOL_H_
+#ifndef CC90F551_2BE5_4A43_B280_8142EB211ACE
+#define CC90F551_2BE5_4A43_B280_8142EB211ACE
 
-#include <gst/gst.h>
+#define PROJ_VER "@proj_ver@"
+#define PROJ_DESCRIPTION "@proj_description@"
+#define BINARY_PACKAGE "@binary_package@"
+#define PROJ_URL "@proj_url@"
+#define LICENSE "@license@"
 
-G_BEGIN_DECLS
-
-typedef struct _GstNvDsBufferPool GstNvDsBufferPool;
-typedef struct _GstNvDsBufferPoolClass GstNvDsBufferPoolClass;
-typedef struct _GstNvDsBufferPoolPrivate GstNvDsBufferPoolPrivate;
-
-#define GST_TYPE_NVDS_BUFFER_POOL (gst_nvds_buffer_pool_get_type())
-#define GST_IS_NVDS_BUFFER_POOL(obj) (G_TYPE_CHECK_INSTANCE_TYPE((obj), GST_TYPE_NVDS_BUFFER_POOL))
-#define GST_NVDS_BUFFER_POOL(obj) (G_TYPE_CHECK_INSTANCE_CAST((obj), GST_TYPE_NVDS_BUFFER_POOL, GstNvDsBufferPool))
-#define GST_NVDS_BUFFER_POOL_CAST(obj) ((GstNvDsBufferPool *)(obj))
-
-#define GST_NVDS_MEMORY_TYPE "nvds"
-#define GST_BUFFER_POOL_OPTION_NVDS_META "GstBufferPoolOptionNvDsMeta"
-
-struct _GstNvDsBufferPool
-{
-  GstBufferPool bufferpool;
-
-  GstNvDsBufferPoolPrivate *priv;
-};
-
-struct _GstNvDsBufferPoolClass
-{
-  GstBufferPoolClass parent_class;
-};
-
-GType gst_nvds_buffer_pool_get_type(void);
-
-GstBufferPool *gst_nvds_buffer_pool_new(void);
-
-G_END_DECLS
-
-#endif /* GSTNVDSBUFFERPOOL_H_ */
+#endif /* CC90F551_2BE5_4A43_B280_8142EB211ACE */
