move consumer and logging macros

--- a/src/meson.build
+++ b/src/meson.build
@@ -52,6 +52,7 @@ gstnvmanualcameasrc_src = [
   'gstnvmanualcamera_utils.cpp',
   'gstnvmanualcamerasrc.cpp',
   'stoppable_thread.cpp',
+  'consumer.cpp',
   'plugin.cpp',
 ]
 
