move producer to own file

--- a/src/meson.build
+++ b/src/meson.build
@@ -53,6 +53,7 @@ gstnvmanualcameasrc_src = [
   'gstnvmanualcamerasrc.cpp',
   'stoppable_thread.cpp',
   'consumer.cpp',
+  'producer.cpp',
   'plugin.cpp',
 ]
 
