add option for jetpack 4.5 use `-Djetpack_45` to enable sharpness metadata

--- a/test/exitcode/meson.build
+++ b/test/exitcode/meson.build
@@ -37,7 +37,7 @@ foreach t: tests
     link_with: [libgstnvmanualcamerasrc, libgstnvmanualcamerameta],
     include_directories: [gstnvmanualcamerasrc_incdirs, mmapi_incdirs],
     cpp_args: [
-      '-DHAS_GSTREAMER',
+      gstnvmanualcamera_metadata_cflags,
       '-DTEST_NAME="' + t['filename'] + '"',
     ]
   )
