--- a/src/meson.build
+++ b/src/meson.build
@@ -63,7 +63,7 @@ endif
 if gst_dep.found()
   gstnvmanualcamera_metadata_cflags += '-DHAS_GSTREAMER'
 endif
-if get_option('jetpack_45')
+if has_jetpack_45
   gstnvmanualcamera_metadata_cflags += '-DJETPACK_45'
 endif
 gstnvmanualcamera_metadata_deps = [
