fix missing Argus headers in pkgconfig (for real)

--- a/src/meson.build
+++ b/src/meson.build
@@ -104,11 +104,13 @@ gstnvmanualcamerameta_dep = declare_dependency(
 
 # a pkg-config file to find the metadata library
 pkg = import('pkgconfig')
+gstnvmanualcamera_metadata_pkgconfig_cflags = gstnvmanualcamera_metadata_cflags
+gstnvmanualcamera_metadata_pkgconfig_cflags += '-I' + argus_include_dir
 pkg.generate(libgstnvmanualcamerameta,
   description: 'Metadata library for `nvmanualcamerasrc` Metadata.',
   extra_cflags: gstnvmanualcamera_metadata_cflags,
   libraries: gstnvmanualcamera_metadata_deps,
-  extra_cflags: ['-I' + argus_include_dir],
+  extra_cflags: gstnvmanualcamera_metadata_pkgconfig_cflags,
   subdirs: meson.project_name(),  # $PREFIX/include/$PROJECT_NAME
   variables: gstnvmanualcamerameta_variables,
 )
