add string pipeline test
to test the element's use in GstParse and diagnose #12

--- a/test/exitcode/meson.build
+++ b/test/exitcode/meson.build
@@ -35,6 +35,12 @@ tests = [
     'suites': ['integration'],
   },
   {
+    'description': 'test string pipeline',
+    'filename': 'test_string_pipeline',
+    'sources': ['test_string_pipeline.cpp'],
+    'suites': ['integration'],
+  },
+  {
     'description': 'demo sharpness',
     'filename': 'demo_sharpness',
     'sources': ['demo_sharpness.cpp'],
