mdegans: fix asan with gcc
* fix Meson is not linking the binary with libasan as it should with gcc
* note: the plugin build with asan does not load

--- a/test/exitcode/meson.build
+++ b/test/exitcode/meson.build
@@ -75,10 +75,6 @@ foreach t: tests
     is_parallel: false,
     suite: t['suites'],
     timeout: 300,  # seconds
-    env: [
-      'GST_DEBUG=4',
-      'GST_PLUGIN_PATH=' + libgstnvmanualcamerasrc_dir,
-      'GST_REGISTRY_UPDATE=yes',
-    ],
+    env: test_envs,
   )
 endforeach
