--- a/test/googletest/meson.build
+++ b/test/googletest/meson.build
@@ -70,10 +70,6 @@ foreach t: tests
     protocol: 'gtest',
     is_parallel: true,
     suite: t['suites'],
-    env: [
-      'GST_DEBUG=4',
-      'GST_PLUGIN_PATH=' + libgstnvmanualcamerasrc_dir,
-      'GST_REGISTRY_UPDATE=yes',
-    ],
+    env: test_envs,
   )
 endforeach
