add start&stop stress test
This test replicates Error: `STOPPING:because:"err" returned code:8` #14

--- a/test/exitcode/meson.build
+++ b/test/exitcode/meson.build
@@ -41,6 +41,12 @@ tests = [
     'suites': ['integration'],
   },
   {
+    'description': 'test stress start stop',
+    'filename': 'test_stress_start_stop',
+    'sources': ['test_stress_start_stop.cpp'],
+    'suites': ['integration'],
+  },
+  {
     'description': 'demo sharpness',
     'filename': 'demo_sharpness',
     'sources': ['demo_sharpness.cpp'],
